feat: add fast iterate example
