# weather-backend/Controllers/PrimeNumberController.cs
@@ -1,4 +1,8 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Runtime.InteropServices;
+using Microsoft.AspNetCore.Mvc;
 
 namespace weather_backend.Controllers
 {
@@ -27,5 +31,25 @@ namespace weather_backend.Controllers
 
             return Ok(isPrime);
         }
+        
+        [HttpGet("haha")]
+        public IActionResult FastestIteratingOverList()
+        {
+            Random rng = new(80000);
+            var Size = 10000;
+            var items = Enumerable.Range(1, Size).Select(x => rng.Next()).ToList();
+
+            int max = 0;
+            foreach (var item in CollectionsMarshal.AsSpan(items))
+            {
+                if (max < item)
+                {
+                    max = item;
+                }
+            }
+            
+            return Ok(max);
+        }
+
     }
 }
